@@ -1,6 +1,13 @@
 $Id$
             
-            [- Version 2.1.17 -]
+            [- Version 2.1.18 -]
+2006-06-11: Corrected bug in Or-chunk/derive-date: If current date is
+            newer than earliest disjunct, stick with current date.
+            setter.lisp: In 'simple-dat-match', any quoted expression
+            should return value 0, because it can contain no free
+            occurrenes of | dat|.
+
+            [- Version 2.1.17 2006/05/30 13:54:47 airfoyle Exp -]
 2006-05-30: Defined 'with-gen-vars', around cool new convention that
             generated-variable names in macros are of the form -x-.
             In debug.lisp: 'g' and all other dbg-stack* searchers now
